--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ header nav {
 }
 
 nav ul {
-  padding: 0px;
-  margin: 40px 0px 0px 0px;
+  padding: 0;
+  margin: 40px 0 0px 0px;
 }
 
 nav ul li {
